= Changelog

== v2022.5.0 (unreleased)

=== Architectural decision records

=== Deprecation warning

=== Breaking changes

- https://github.com/eclipse-sirius/sirius-components/issues/1088[#1088] [core] Change the type of `IRepresentationDescription#id` from UUID to String. This will allow us, when we will receive an operation to perform with a given representation description identifier, to determine if this operation should be handled by the Sirius Desktop compatibility layer, the View support or by a programmatic API

=== Dependency update

- https://github.com/eclipse-sirius/sirius-components/issues/1118[#1118] [core] Switch to Spring Boot 2.6.6
- https://github.com/eclipse-sirius/sirius-components/issues/1118[#1118] [core] Switch to GraphQL Java 18.0
- https://github.com/eclipse-sirius/sirius-components/issues/1118[#1118] [core] Switch to Sirius Desktop 7.0.0

=== Bug fixes

=== Improvements

=== New features

- https://github.com/eclipse-sirius/sirius-components/issues/1112[#1112] [explorer] Add support for Ctrl+click or ⌘+click to select multiple elements in the explorer

== v2022.3.0

=== Architectural decision records

- [ADR-039] Provide a variable to detect the environment
- [ADR-040] Add support for a post selection
- [ADR-041] Add the ability to contribute additional services to the EMFQueryService
- [ADR-042] Use wildcard collections instead of List<Object> in Providers
- [ADR-043] Consider multiple objects as the input of a form
- [ADR-044] Use border node "snap to parent container" algorithm
- [ADR-045] Allow the explorer to reveal the current selection
- [ADR-046] Make the workbench panels' content configurable
- [ADR-047] Add support for tools preconditions
- [ADR-048] Rename concepts related to tools
- [ADR-049] Improve the incremental layout for dropper elements

=== Deprecation warning