@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2021 Obeo.
+ * Copyright (c) 2019, 2022 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -86,7 +86,7 @@ export const FormWebSocketContainer = ({
     }
   );
   const { toast, formWebSocketContainer } = value as SchemaValue;
-  const { id, formId, form, subscribers, widgetSubscriptions, message } = context;
+  const { id, formId, form, widgetSubscriptions, message } = context;
 
   /**
    * Displays an other form if the selection indicates that we should display another properties view.
@@ -134,7 +134,6 @@ export const FormWebSocketContainer = ({
       <Properties
         editingContextId={editingContextId}
         form={form}
-        subscribers={subscribers}
         widgetSubscriptions={widgetSubscriptions}
         setSelection={setSelection}
         readOnly={readOnly}
