@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021 Obeo.
+ * Copyright (c) 2021, 2022 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -10,14 +10,18 @@
  * Contributors:
  *     Obeo - initial API and implementation
  *******************************************************************************/
-import { Form, Subscriber, WidgetSubscription } from 'form/Form.types';
+import { Form, Page, WidgetSubscription } from 'form/Form.types';
 import { Selection } from 'workbench/Workbench.types';
 
 export interface FormProps {
   editingContextId: string;
   form: Form;
-  subscribers: Subscriber[];
   widgetSubscriptions: WidgetSubscription[];
   readOnly: boolean;
   setSelection: (selection: Selection) => void;
+}
+
+export interface PropertiesState {
+  selectedPage: Page;
+  pages: Page[];
 }
